--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,14 @@
+@import url("facts-styles.css");
+
 * {
   box-sizing: border-box;
+}
+
+body {
+  background-color: hsla(0, 0%, 99%, 1);
+  font-family: 'Alegreya Sans', sans-serif;
+}
+
+.navbar *, .heading {
+  font-family: 'Gloria Hallelujah', cursive;
 }
