--- a/styles/landing.css
+++ b/styles/landing.css
@@ -5,14 +5,6 @@
 body {
   background-color: hsla(0, 0%, 99%, 1);
 }
-/*
-color1: hsla(0, 0%, 99%, 1);
-color2: hsla(231, 80%, 80%, 1); 163 175 245
-color3: hsla(30, 91%, 56%, 1); 245 143 41
-color4: hsla(163, 100%, 33%, 1); 0 168 121
-color5: hsla(211, 56%, 43%, 1); 48 108 171
-*/
-
 
 .heading, h2, h4 {
   font-family: 'Gloria Hallelujah', cursive;
@@ -54,12 +46,13 @@ color5: hsla(211, 56%, 43%, 1); 48 108 171
   background-image: url('../assets/images/panel-blue.png'); !important;
   background-size: 100% 100%;
   height: 40px;
-  width: 100px;
+  width: 160px;
   border: 0px solid white !important;
   font-size: 1.3em;
-  width: 160px;
   color: black;
   outline: 0;
+  box-shadow: none;
+  -webkit-box-shadow: none;
 }
 
 .caret {
