--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 @import url("landing.css");
-@import url("facts-styles.css");
-@import url("testimonials-styles.css");
+@import url("facts.css");
+@import url("testimonials.css");
 @import url("exercises.css");
 
 * {
